fixed overflow issue in list views

--- a/web-app/css/layout.css
+++ b/web-app/css/layout.css
@@ -14,6 +14,7 @@ h2 {
 #body-list {
     padding: 10px;
     background: #f0f0f0;
+    overflow-x: scroll;
 }
 
 #body-list table a {
@@ -314,6 +315,7 @@ h2 {
 #body-list table {
     border: 1px solid #ddd;
     border-collapse: collapse;
+    width: 1500px;
 }
 
 #body-list td {
